# Lads_oop

./: main.cpp  solution.h
Лаба 1 (ооп)/: CMakeLists.txt  solution.cpp
Лаба 1 (ооп)/tests/: test_solution.cpp
